# K-memo

./: .gitignore  CLAUDE.md  LICENSE  README.md  布局.html
.augment/rules/: rules.md
.cursor/rules/: rules.mdc
k-memo/: CMakeLists.txt  IconManager.cpp  IconManager.h  QuickAddWidget.cpp  QuickAddWidget.h  TaskDetailWidget.cpp  TaskDetailWidget.h  TaskStatsWidget.cpp  TaskStatsWidget.h  kmemo.cpp  kmemo.h  kmemo.ui  kmemo.ui.backup  main.cpp  resources.qrc
k-memo/data/: .gitkeep
k-memo/database/: databasemanager.cpp  databasemanager.h
k-memo/managers/: notificationmanager.cpp  notificationmanager.h  traymanager.cpp  traymanager.h
k-memo/models/: task.cpp  task.h  taskmodel.cpp  taskmodel.h
k-memo/test/: .gitkeep
k-memo/widgets/simple/: simpleaddwidget.cpp  simpleaddwidget.h  simpleaddwidget.ui  simpletasklistwidget.cpp  simpletasklistwidget.h  simpletasklistwidget.ui
project_document/: [000]功能模块文档.md  [001]K-memo桌面便签应用开发计划.md  [002]K-memo方案二详细实施计划.md  [003]数据库设计文档.md  [101]Qt Quick重构技术方案.md  [303]Qt日志系统开发文档.md
